# ipso

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  ipso-publish.yaml  nota-bene-ci.yaml  nota-bene-publish.yaml  pytest-ipso-publish.yaml  pytest-nota-bene-publish.yaml
docs/: concept.md  fixtures.md  lsp.md  pytest.md  staleness.md  tests.md
ipso/: Makefile  README.md  pyproject.toml
ipso/src/ipso/: __init__.py  _runner.py  _state.py
ipso/src/ipso/_executor/: __main__.py
ipso/tests/: conftest.py  test_in_kernel_api.py  test_version.py
nota-bene/: Makefile  README.md  pyproject.toml
nota-bene/src/nota_bene/: __init__.py  _runner.py  _state.py
nota-bene/src/nota_bene/_executor/: __main__.py
nota-bene/tests/: conftest.py  test_in_kernel_api.py  test_version.py
pytest-ipso/: Makefile  README.md  pyproject.toml
pytest-ipso/src/pytest_ipso/: __init__.py  plugin.py
pytest-ipso/tests/: conftest.py  test_plugin.py  test_version.py
pytest-nota-bene/: Makefile  README.md  pyproject.toml
pytest-nota-bene/src/pytest_nota_bene/: __init__.py  plugin.py
pytest-nota-bene/tests/: conftest.py  test_plugin.py  test_version.py
scripts/: bump-version  opencode-e2e.sh  release
specs/: cli-and-mcp-scaffold.md  cli-test-runner.md  diagnostic-renames.md  edit-flow-refactor.md  fixture-flow-editor-and-tracebacks.md  github-ci-and-openrouter-e2e.md  ipso-in-kernel-api.md  ipso-python-package.md  json-path-range.md  lsp-server.md  maturin-wheel-packaging.md  mcp-repair-tool.md  nbformat-45-enforcement.md  nota-bene-in-kernel-api.md  nota-bene-python-package.md  opencode-e2e-functional-tests.md  playground-and-execute-cell.md  programmatic-cli.md  pytest-plugin.md  sha-computation-bug-fix.md  test-editor-cli.md
src/: diagnostics.rs  diff_utils.rs  edit.rs  filter.rs  json_path.rs  lsp.rs  main.rs  mcp.rs  metadata.rs  notebook.rs  save.rs  shas.rs  test_runner.rs  update.rs  view.rs
tests/: cli.rs  execute_nb.py  test_wheel_e2e.sh
tests/common/: mod.rs
tests/fixtures/: legacy-44.ipynb  simple.ipynb  simple.nota-bene.ipynb  test-fail-assertion.ipynb  test-fixture-error.ipynb  test-multi-cell.ipynb  test-pass.ipynb  test-source-error.ipynb  test-subtests.ipynb  test-with-diff.ipynb
