[package]
name = "ipso"
version = "0.1.5"
edition = "2021"
description = "Notebook testing with fixtures, patches, and AI-generated tests"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
nbformat = "1.2.2"
diffy = "0.4"
indexmap = { version = "2", features = ["serde"] }
sha1 = "0.10"
canonical_json = "0.5"
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
jsonc-parser = "0.29"
tower-lsp = "0.20"
lru = "0.12"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
