[project]
name = "pytest-ipso"
version = "0.1.1"
description = "pytest plugin for running ipso notebook cell tests"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = ["pytest", "ipso"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Framework :: Pytest",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://susu.dev/ipso"
Repository = "https://github.com/susu-dot-dev/ipso"
Issues = "https://github.com/susu-dot-dev/ipso/issues"

[project.entry-points."pytest11"]
ipso = "pytest_ipso.plugin"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["tests/**"]

[dependency-groups]
dev = ["pytest", "pytest-cov>=4.1.0", "ipso"]
lint = ["ruff>=0.12.9", "mypy>=1.0.0"]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
ipso = { path = "../ipso", editable = true }

[tool.ruff]
exclude = [".venv"]
line-length = 120

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "--cov --cov-report=xml --cov-report=html --cov-config=.coveragerc"

[tool.coverage.run]
source_pkgs = ["pytest_ipso", "tests"]
branch = true
parallel = true
omit = ["pytest_ipso/__about__.py"]
