[project]
name = "pytest-nota-bene"
version = "0.1.1"
description = "pytest plugin for running nota-bene notebook cell tests"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = ["pytest", "nota-bene"]

[project.urls]
Homepage = "https://susu.dev/nota-bene"
Repository = "https://github.com/susu-dot-dev/nota-bene"
Issues = "https://github.com/susu-dot-dev/nota-bene/issues"

[project.entry-points."pytest11"]
nota-bene = "pytest_nota_bene.plugin"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["tests/**"]

[dependency-groups]
dev = ["pytest", "pytest-cov>=4.1.0", "nota-bene"]
lint = ["ruff>=0.12.9", "mypy>=1.0.0"]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
nota-bene = { path = "../nota-bene", editable = true }

[tool.ruff]
exclude = [".venv"]
line-length = 120

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "--cov --cov-report=xml --cov-report=html --cov-config=.coveragerc"

[tool.coverage.run]
source_pkgs = ["pytest_nota_bene", "tests"]
branch = true
parallel = true
omit = ["pytest_nota_bene/__about__.py"]
